<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (©) 2026 Mihai-Cristian Condrea
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->
<resources>
    <string name="android_version">Android version</string>
    <string name="api_level">API level</string>
    <string name="app_build">App build: %6$s\n%1$s\n%2$s\n%3$s\n%4$s\n%5$s</string>
    <string name="app_build_version">Application build version</string>
    <string name="app_info">App info</string>
    <string name="app_toolkit_version">App Toolkit version</string>
    <string name="debug">Debug</string>
    <string name="device_info">Device info</string>
    <string name="device_model">Device model</string>
    <string name="google_play_services_version">Google Play services version</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="oss_license_title">Open source licenses</string>
    <string name="release">Release</string>
    <string name="settings">Settings</string>
    <string name="settings_placeholder_description">No settings selected. Choose an option to view its details here.</string>
    <string name="share">Share</string>
    <string name="snack_copied_to_clipboard">Copied to clipboard</string>
    <string name="snack_copy_failed">Couldn\'t copy to clipboard</string>
    <string name="snack_device_info_copied">Device info copied to clipboard</string>
    <string name="snack_device_info_failed">Unable to load device info</string>
    <string name="summary_preference_settings_oss">License details for open source software</string>
    <string name="summary_share_message">Check out this app that I\'m using. It has some really cool features that you might find interesting. You can download it from the Play Store at: %1$s</string>
    <string name="updates">Updates</string>
    <string name="snack_seasonal_themes_unlocked">Enjoy</string>
</resources>
