...
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->
<resources>
         separates it. Keep the wording identical between them when translating. -->
    <string name="about">About</string>
    <string name="amoled_mode">AMOLED mode</string>
    <string name="clear_search">Clear search</string>
    <string name="color_palette">Color palette</string>
    <string name="content_description_more_options">More options</string>
    <string name="dark_mode">Dark mode</string>
    <string name="dialog_info_language">Personalize your experience with your preferred language. Any language changes you make take effect right away, ensuring a seamless experience in your chosen language</string>
    <string name="dialog_info_startup">Configures the initial screen presented to users upon launching the application. This setting influences the user\'s first interaction with the app and can be tailored to specific user segments or product goals.</string>
    <string name="dialog_language_subtitle">Select your preferred language</string>
    <string name="dialog_startup_subtitle">Choose your preferred startup page</string>
    <string name="done_button_content_description">Done</string>
    <string name="follow_system">Follow system mode</string>
    <string name="go_back">Go back</string>
    <string name="learn_more">Learn more</string>
    <string name="light_mode">Light mode</string>
    <string name="loading">Loading…</string>
    <string name="markdown_format_bold">Bold</string>
    <string name="markdown_format_bullet_list">Bulleted list</string>
    <string name="markdown_format_code">Inline code</string>
...
    <string name="markdown_supported">Markdown supported</string>
    <string name="onboarding_theme_dark_desc">Easy on the eyes.</string>
    <string name="onboarding_theme_light_desc">Bright and energetic.</string>
    <string name="onboarding_theme_system_desc">Matches your device.</string>
    <string name="other_colors">Other colors</string>
    <string name="screen_and_display_settings">screen and display settings.</string>
    <string name="search">Search</string>
    <string name="select_language_title">Select language</string>
    <string name="sort_by">Sort by</string>
    <string name="sponsored_ad_label">● Sponsored Ad</string>
    <string name="sponsored_ad_label_plain">Sponsored Ad</string>
    <string name="startup_page">Startup page</string>
    <string name="summary_dark_theme">Dark theme leverages a deep background to significantly extend your battery life. To activate it, simply navigate to your Android\'s system manager and select your preferred theme in</string>
...
