...
    <string name="summary_preference_settings_dynamic_colors">Apply colors from wallpapers to the app theme</string>
    <string name="summary_preference_settings_language">Changes the language used in the app</string>
    <string name="summary_preference_settings_show_labels_on_bottom_bar">Display item titles below icons in the bottom navigation bar</string>
    <string name="summary_preference_settings_startup_page">Choose the screen to be displayed when the app starts.</string>
    <string name="will_never_turn_on_automatically">Will never turn on automatically</string>
    <string name="will_turn_on_automatically_by_system">Will turn on automatically by the system</string>
    <string name="display">Display</string>
</resources>

